--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h2 {
 
 /*Design das box*/
  input[type="text"],
- input[type="senha"]{
+ input[type="password"]{
 
     width: 100%;
     padding: 10px;
@@ -34,8 +34,27 @@ button{
 
     width: 100%;
     padding: 10px;
-    background-color: #1e3a8a;
+    background-color: #2a4180;
     color:white; 
     border: none;
     border-radius: 5px;       
+}
+
+button:hover{
+
+    background: #292b2b;
+
+
+}
+
+a{
+    color: #2d2e2e;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+a:hover{
+
+    text-decoration: underline;
+
 }
