--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,17 @@
-body{
-    
-    font-family: Arial, sans-serif; /*Fonte do menu */
-    background-color: #f0f2f5;
+body {
+    font-family: Arial, sans-serif;
+    background: linear-gradient(to right, white 50%, transparent 50%),url("imagem/4138210.jpg");
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: left top, left top;
     display: flex; 
-    justify-content: center;
-    align-items: center; /*Centraliza o login*/
-    height: 100vh; /*tela cheia*/
+    justify-content: flex-end; /* alinhamento à direita */
+    align-items: center; /* mantém verticalmente centralizado */
+    height: 100vh;
     margin: 0;
-
+    padding-right: 50px; /* opcional: deixa um espaço da borda */
 }
+
 
 h2 {
 
@@ -29,24 +32,24 @@ h2 {
     box-sizing: border-box;
 
 
+
 }
 /*botão*/
-button{
-
-    width: 100%;
-    padding: 10px;
+button {
+    width: auto; /* deixa o botão com largura ajustada */
+    padding: 10px 20px;
     background-color: #2a4180;
-    color:white; 
+    color: white;
     border: none;
-    border-radius: 5px;       
+    border-radius: 5px;
+    display: block; 
+    margin-left: auto; /* empurra o botão para a direita */
 }
 
-button:hover{
-
+button:hover {
     background: #292b2b;
-
-
 }
+
 
 a{
     color: #2d2e2e;
