--- a/CSS/paginainc.css
+++ b/CSS/paginainc.css
@@ -1,7 +1,7 @@
 body{
 
     font-family: Arial, sans-serif;
-    background-color: antiquewhite;
+    background-color: rgb(255, 255, 255);
     margin: 0;
     padding: 0;
 }
@@ -67,7 +67,7 @@ input[type="user-link"]
     padding: 10px;
     margin: 8px 0;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #747474;
     box-sizing: border-box;
 
 
